# bead

./: .gitignore  .travis.yml  Bead.cabal  Dockerfile  bead.config  docker-compose.yaml  stack.yaml  start-ghci  start-ghci-nosql  start-ghci-nosso
backend/scripts/: bead  beadd
backend/scripts/modules/: Cleanup.hs  Drop.hs  Kill.hs  Take.hs  Test.hs  bulk.sh  common.sh  test.sh  watchdog.sh
backend/scripts/templates/: build.sh  run.sh
docker/: build.sh  snaplet-fay-search-all-pkgdbs.patch  stack-snaplet-fay.yaml  travis-test.sh
docker/container-script/: build  build.sh  dev-env-setup  dev-env-setup.sh  run
lang/: DictionaryHu.hs
snaplets/fay/src/: DynamicContents.hs
snaplets/fay/src/Bead/Domain/Shared/: Evaluation.hs
snaplets/fay/src/Bead/View/: Validators.hs
src/: AdminMain.hs  SnapMain.hs
src/Bead/: Config.hs
src/Bead/Config/: Configuration.hs  Parser.hs
src/Bead/Controller/: Logging.hs  Pages.hs  ServiceContext.hs  UserStories.hs
src/Bead/Daemon/: Email.hs  LDAP.hs  TestAgent.hs
src/Bead/Daemon/LDAP/: Query.hs
src/Bead/Domain/: Entities.hs  Evaluation.hs  JSON.hs  Relationships.hs  String.hs  TimeZone.hs
src/Bead/Domain/Entity/: Assessment.hs  Assignment.hs  Comment.hs  Feedback.hs  Notification.hs  TestCase.hs  TestScript.hs
src/Bead/Persistence/: Guards.hs  Initialization.hs  NoSQLDir.hs  NoSQLDirFile.hs  Persist.hs  Relations.hs  SQL.hs
src/Bead/Persistence/SQL/: Assessment.hs  Assignment.hs  Class.hs  Comment.hs  Course.hs  Entities.hs  Evaluation.hs  Feedback.hs  FileSystem.hs  Group.hs  JSON.hs  Moss.hs  MySQL.hs  MySQLTestRunner.hs  Notification.hs  Score.hs  Submission.hs  TestCase.hs  TestData.hs  TestJob.hs  TestScript.hs  User.hs
src/Bead/View/: AuthToken.hs  BeadContext.hs  BeadContextInit.hs  Common.hs  Content.hs  ContentHandler.hs  DataBridge.hs  Dictionary.hs  DictionaryFile.hs  DictionaryLoader.hs  ErrorPage.hs  FileUploads.hs  Header.hs  Headers.hs  I18N.hs  LoggedInFilter.hs  Logger.hs  Login.hs  Markdown.hs  Pagelets.hs  Registration.hs  RequestParams.hs  ResetPassword.hs  RouteOf.hs  Routing.hs  Style.hs  TemplateAndComponentNames.hs  UserActions.hs
src/Bead/View/Content/: All.hs  Bootstrap.hs  Comments.hs  ExportEvaluationsScores.hs  ExportSubmissions.hs  Form.hs  GetCsv.hs  GetSubmission.hs  QueueSubmissionForTest.hs  ScoreInfo.hs  SeeMore.hs  StateVisualization.hs  SubmissionState.hs  SubmissionTable.hs  Utils.hs
src/Bead/View/Content/Administration/: Page.hs
src/Bead/View/Content/Assessment/: Page.hs
src/Bead/View/Content/Assignment/: Data.hs  Page.hs  View.hs
src/Bead/View/Content/CheckSimilarity/: Moss.hs
src/Bead/View/Content/CourseAdmin/: Page.hs
src/Bead/View/Content/CourseManagement/: GroupManagement.hs  Page.hs  TestScript.hs  TestScripts.hs
src/Bead/View/Content/CourseOverview/: Page.hs
src/Bead/View/Content/Evaluation/: Page.hs
src/Bead/View/Content/EvaluationTable/: Page.hs
src/Bead/View/Content/GroupOverview/: Page.hs
src/Bead/View/Content/GroupRegistration/: Page.hs
src/Bead/View/Content/Home/: Data.hs  Page.hs  View.hs
src/Bead/View/Content/NewTestScript/: Page.hs
src/Bead/View/Content/Notifications/: Page.hs
src/Bead/View/Content/Profile/: Page.hs
src/Bead/View/Content/Public/: ErrorPage.hs  Index.hs  Login.hs  Registration.hs  ResetPassword.hs
src/Bead/View/Content/Rest/: Group.hs
src/Bead/View/Content/Rest/SubmissionTable/: Page.hs
src/Bead/View/Content/Score/: Page.hs
src/Bead/View/Content/StudentView/: Page.hs
src/Bead/View/Content/Submission/: Common.hs  Page.hs
src/Bead/View/Content/SubmissionDetails/: Page.hs
src/Bead/View/Content/TestScript/: Page.hs
src/Bead/View/Content/UploadFile/: Page.hs
src/Bead/View/Content/UserDetails/: Page.hs
src/Bead/View/Content/Welcome/: Page.hs
src/Bead/View/Headers/: AcceptLanguage.hs
src/Bead/View/Translation/: Base.hs  I18N.hs
src/Bead/View/Translation/Language/: DictionaryEn.hs  DictionaryHu.hs
src/Control/Monad/: Transaction.hs
src/Snap/Snaplet/Auth/Backends/: SafeJsonFile.hs
src/Test/Tasty/: Arbitrary.hs  TestSet.hs
static/: bead.css
test/: TestMain.hs
test/Test/: View.hs
test/Test/Model/: UserStory.hs
test/Test/Property/: Common.hs  Domain.hs  EntityGen.hs  Persistence.hs
test/Test/Regression/: UserStory.hs
test/Test/Unit/: AuthToken.hs  Header.hs  Module.hs  Persistence.hs  UserStory.hs
