Name:                Bead
Version:             3000
License:             BSD3
synopsis:            Online assignment management system
Description:         E-learning snap based server for special teaching purposes
                     Administrators can submit exercises and students can submit
                     solutions for the given exercises.
Author:              Andor Penzes <andor.penzes@gmail.com>
Maintainer:          andor.penzes@gmail.com
Stability:           Experimental
Build-Type:          Simple
Cabal-Version:       >= 1.8

Data-Files:
  snaplets/fay/src/Bead/Domain/Shared/Evaluation.hs,
  snaplets/fay/src/Bead/View/Validators.hs,
  snaplets/fay/src/Bead/View/Fay/HookIds.hs,
  snaplets/fay/src/Bead/View/Fay/Hooks.hs,

  static/fonts/glyphicons-halflings-regular.woff,
  static/fonts/glyphicons-halflings-regular.ttf,
  static/bead.css,
  static/bootstrap.custombutton.css,
  static/bootstrap.min.css,
  static/bootstrap.min.js,
  static/bootstrap-datetimepicker.min.css,
  static/bootstrap-datetimepicker.min.js,
  static/header.css,
  static/helpers.js,
  static/inside.css,
  static/jquery-ui.css,
  static/jquery.js,
  static/jquery-ui.js,
  static/moment.js,
  static/screen.css,
  static/images/*.png,
  static/images/*.gif,
  static/icon.ico,
  static/katex/contrib/copy-tex.min.css,
  static/katex/contrib/copy-tex.min.js,
  static/katex/fonts/KaTeX_Caligraphic-Bold.woff,
  static/katex/fonts/KaTeX_SansSerif-Italic.woff2,
  static/katex/fonts/KaTeX_Math-BoldItalic.woff,
  static/katex/fonts/KaTeX_Math-Italic.woff,
  static/katex/fonts/KaTeX_Script-Regular.woff2,
  static/katex/fonts/KaTeX_SansSerif-Bold.woff,
  static/katex/fonts/KaTeX_Math-Italic.woff2,
  static/katex/fonts/KaTeX_Script-Regular.woff,
  static/katex/fonts/KaTeX_SansSerif-Bold.ttf,
  static/katex/fonts/KaTeX_AMS-Regular.ttf,
  static/katex/fonts/KaTeX_Fraktur-Regular.ttf,
  static/katex/fonts/KaTeX_Caligraphic-Regular.woff2,
  static/katex/fonts/KaTeX_Typewriter-Regular.woff2,
  static/katex/fonts/KaTeX_SansSerif-Regular.woff2,
  static/katex/fonts/KaTeX_Caligraphic-Regular.woff,
  static/katex/fonts/KaTeX_Size3-Regular.ttf,
  static/katex/fonts/KaTeX_Size3-Regular.woff2,
  static/katex/fonts/KaTeX_Caligraphic-Bold.ttf,
  static/katex/fonts/KaTeX_Size1-Regular.ttf,
  static/katex/fonts/KaTeX_Fraktur-Bold.woff2,
  static/katex/fonts/KaTeX_Size1-Regular.woff2,
  static/katex/fonts/KaTeX_Fraktur-Regular.woff,
  static/katex/fonts/KaTeX_Size1-Regular.woff,
  static/katex/fonts/KaTeX_Math-BoldItalic.ttf,
  static/katex/fonts/KaTeX_Main-Regular.ttf,
  static/katex/fonts/KaTeX_SansSerif-Regular.ttf,
  static/katex/fonts/KaTeX_Main-Italic.woff2,
  static/katex/fonts/KaTeX_Main-Regular.woff,
  static/katex/fonts/KaTeX_Size2-Regular.woff,
  static/katex/fonts/KaTeX_Size4-Regular.woff,
  static/katex/fonts/KaTeX_SansSerif-Bold.woff2,
  static/katex/fonts/KaTeX_Caligraphic-Regular.ttf,
  static/katex/fonts/KaTeX_Size4-Regular.ttf,
  static/katex/fonts/KaTeX_Fraktur-Bold.woff,
  static/katex/fonts/KaTeX_Typewriter-Regular.woff,
  static/katex/fonts/KaTeX_Fraktur-Bold.ttf,
  static/katex/fonts/KaTeX_Main-Bold.woff,
  static/katex/fonts/KaTeX_Typewriter-Regular.ttf,
  static/katex/fonts/KaTeX_SansSerif-Italic.ttf,
  static/katex/fonts/KaTeX_AMS-Regular.woff2,
  static/katex/fonts/KaTeX_Size2-Regular.ttf,
  static/katex/fonts/KaTeX_Main-Italic.woff,
  static/katex/fonts/KaTeX_Script-Regular.ttf,
  static/katex/fonts/KaTeX_Main-BoldItalic.woff,
  static/katex/fonts/KaTeX_Main-Bold.ttf,
  static/katex/fonts/KaTeX_Main-BoldItalic.ttf,
  static/katex/fonts/KaTeX_AMS-Regular.woff,
  static/katex/fonts/KaTeX_Math-BoldItalic.woff2,
  static/katex/fonts/KaTeX_Size4-Regular.woff2,
  static/katex/fonts/KaTeX_Main-BoldItalic.woff2,
  static/katex/fonts/KaTeX_Main-Regular.woff2,
  static/katex/fonts/KaTeX_Main-Italic.ttf,
  static/katex/fonts/KaTeX_Size2-Regular.woff2,
  static/katex/fonts/KaTeX_SansSerif-Regular.woff,
  static/katex/fonts/KaTeX_Size3-Regular.woff,
  static/katex/fonts/KaTeX_SansSerif-Italic.woff,
  static/katex/fonts/KaTeX_Main-Bold.woff2,
  static/katex/fonts/KaTeX_Fraktur-Regular.woff2,
  static/katex/fonts/KaTeX_Math-Italic.ttf,
  static/katex/fonts/KaTeX_Caligraphic-Bold.woff2,
  static/katex/katex.min.css,
  static/katex/katex.min.js,

  cookie

  bead.config

Flag Tests
  Description:  Enable testing
  Default:      False

Flag MySQL
  Description:  Enable MySQL persistent layer
  Default:      True

Flag SSO
  Description:  Enable authentication with Single Sign-On
  Default:      True

Library
  HS-Source-Dirs: src, snaplets/fay/src

  if flag(MySQL)
    CPP-Options: -DMYSQL

    Build-Depends:
      mysql-haskell,
      persistent,
      persistent-mysql-haskell,
      persistent-template,
      resourcet

    Exposed-Modules:
      Bead.Persistence.SQL
      Bead.Persistence.SQL.Assessment
      Bead.Persistence.SQL.Assignment
      Bead.Persistence.SQL.Class
      Bead.Persistence.SQL.Comment
      Bead.Persistence.SQL.Course
      Bead.Persistence.SQL.Entities
      Bead.Persistence.SQL.Evaluation
      Bead.Persistence.SQL.Feedback
      Bead.Persistence.SQL.FileSystem
      Bead.Persistence.SQL.Group
      Bead.Persistence.SQL.MySQL
      Bead.Persistence.SQL.MySQLTestRunner
      Bead.Persistence.SQL.JSON
      Bead.Persistence.SQL.Notification
      Bead.Persistence.SQL.Registration
      Bead.Persistence.SQL.Score
      Bead.Persistence.SQL.Submission
      Bead.Persistence.SQL.TestCase
      Bead.Persistence.SQL.TestData
      Bead.Persistence.SQL.TestJob
      Bead.Persistence.SQL.TestScript
      Bead.Persistence.SQL.User

  if flag(Tests)
    CPP-Options: -DTEST

  if flag(SSO)
    CPP-Options: -DSSO

    Build-Depends:
      base64-bytestring,
      gssapi

    Exposed-Modules:
      Bead.Daemon.LDAP
      Bead.Daemon.LDAP.Query
      Bead.Daemon.LDAP.Result
  else
    CPP-Options: -DEmailEnabled

    Exposed-Modules:
      Bead.View.EmailTemplate
      Bead.View.ResetPassword

  Build-Depends:
    aeson,
    async,
    base,
    blaze-html,
    blaze-markup,
    bytestring,
    case-insensitive,
    containers,
    deepseq,
    directory,
    esqueleto,
    hashable,
    HUnit,
    fay,
    filepath,
    json,
    jose-jwt,
    lens,
    mime-mail,
    MissingH,
    monad-logger,
    mtl,
    pandoc,
    pandoc-types,
    process,
    random,
    regex-tdfa,
    snap,
    snap-core,
    snap-server,
    snap-blaze,
    stm,
    template-haskell,
    temporary,
    text,
    time,
    timezone-olson,
    timezone-series,
    transformers,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    QuickCheck,
    utf8-string,
    unix,
    unordered-containers,
    uuid,
    yaml,
    zip-archive

  Exposed-Modules:
    AdminMain
    SnapMain
    Bead.View.Dictionary
    Bead.View.DictionaryFile
    Bead.View.Translation

    Paths_Bead
    Bead.Config
    Bead.Config.Configuration
    Bead.Config.Parser
    Bead.Controller.Logging
    Bead.Controller.Pages
    Bead.Controller.ServiceContext
    Bead.Controller.UserStories
    Bead.Daemon.Email
    Bead.Daemon.TestAgent
    Bead.Domain.Entity.Assessment
    Bead.Domain.Entity.Assignment
    Bead.Domain.Entity.Comment
    Bead.Domain.Entity.Feedback
    Bead.Domain.Entity.Notification
    Bead.Domain.Entity.TestCase
    Bead.Domain.Entities
    Bead.Domain.Evaluation
    Bead.Domain.Func
    Bead.Domain.Relationships
    Bead.Domain.RolePermission
    Bead.Domain.Shared.Evaluation
    Bead.Domain.String
    Bead.Domain.TimeZone
    Bead.Domain.Types
    Bead.Persistence.Guards
    Bead.Persistence.Initialization
    Bead.Persistence.Persist
    Bead.Persistence.Relations
    Bead.View.Anchor
    Bead.View.AuthToken
    Bead.View.BeadContext
    Bead.View.BeadContextInit
    Bead.View.Common
    Bead.View.Content
    Bead.View.Content.Administration.Page
    Bead.View.Content.Assessment.Page
    Bead.View.Content.Assignment.Data
    Bead.View.Content.Assignment.Page
    Bead.View.Content.Assignment.View
    Bead.View.Content.CourseManagement.GroupManagement
    Bead.View.Content.CourseManagement.Page
    Bead.View.Content.CourseManagement.TestScript
    Bead.View.Content.CourseManagement.TestScripts
    Bead.View.Content.Evaluation.Page
    Bead.View.Content.EvaluationTable.Page
    Bead.View.Content.GroupOverview.Page
    Bead.View.Content.GroupRegistration.Page
    Bead.View.Content.Notifications.Page
    Bead.View.Content.Profile.Page
    Bead.View.Content.Public.ErrorPage
    Bead.View.Content.Public.Index
    Bead.View.Content.Public.Registration
    Bead.View.Content.Public.ResetPassword
    Bead.View.Content.QueueSubmissionForTest
    Bead.View.Content.Rest.Group
    Bead.View.Content.Rest.SubmissionTable.Page
    Bead.View.Content.Score.Page
    Bead.View.Content.StateVisualization
    Bead.View.Content.StudentView.Page
    Bead.View.Content.Submission.Common
    Bead.View.Content.Submission.Page
    Bead.View.Content.SubmissionDetails.Page
    Bead.View.Content.UploadFile.Page
    Bead.View.Content.UserDetails.Page
    Bead.View.Content.All
    Bead.View.Content.Bootstrap
    Bead.View.Content.Comments
    Bead.View.Content.ExportEvaluationsScores
    Bead.View.Content.ExportSubmissions
    Bead.View.Content.GetSubmission
    Bead.View.Content.GetCsv
    Bead.View.Content.SubmissionTable
    Bead.View.Content.VisualConstants
    Bead.View.Content.Welcome.Page
    Bead.View.ContentHandler
    Bead.View.DataBridge
    Bead.View.DataDir
    Bead.View.ErrorPage
    Bead.View.Header
    Bead.View.Fay.Hooks
    Bead.View.Fay.HookIds
    Bead.View.Fay.JSON.ServerSide
    Bead.View.I18N
    Bead.View.Login
    Bead.View.Logger
    Bead.View.Markdown
    Bead.View.Pagelets
    Bead.View.Registration
    Bead.View.RequestParams
    Bead.View.RouteOf
    Bead.View.Routing
    Bead.View.TemplateAndComponentNames
    Bead.View.Translation.Base
    Bead.View.Translation.Entries
    Bead.View.Translation.I18N
    Bead.View.Translation.Language.DictionaryEn
    Bead.View.Translation.Language.DictionaryHu
    Bead.View.UserActions
    Bead.View.Validators
    Test.Tasty.Arbitrary
    Test.Tasty.RandomData
    Test.Tasty.TestSet

Executable Bead
  Build-Depends:    base, Bead
  Main-is:          Main.hs
  HS-Source-Dirs:   main

Executable BeadAdmin
  Build-Depends:    base, Bead
  Main-is:          Admin.hs
  HS-Source-Dirs:   main

Executable BeadTest
  Build-Depends:
    base,
    Bead,
    blaze-html,
    bytestring,
    containers,
    directory,
    filepath,
    HUnit,
    MissingH,
    mtl,
    QuickCheck,
    snap,
    snap-core,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    temporary,
    text,
    time,
    transformers,
    unordered-containers,
    uuid,
    xmlhtml
  if flag(SSO)
    CPP-Options: -DSSO -DTEST
  else
    CPP-Options: -DEmailEnabled -DTEST
  if flag(MySQL)
    CPP-Options: -DTEST -DMYSQL
  else
    CPP-Options: -DTEST
  HS-Source-Dirs: test
  Main-is: TestMain.hs

  Other-modules:
    Test.Model.UserStory
    Test.Property.EntityGen
    Test.Property.Persistence
    Test.Regression.UserStory
    Test.Unit.AuthToken
    Test.Unit.Header
    Test.Unit.Module
    Test.Unit.Persistence
    Test.Unit.UserStory
    Test.View

  if flag(Tests)
    Buildable:      True
  else
    Buildable:      False
